WexGit/Wex_DX/force-app/main/default/objects/BOCA_To_Prospect_Settings__c/BOCA_To_Prospect_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>BOCA To Prospect Settings</label>
</CustomObject>