WexGit/Wex_DX/force-app/main/default/objects/BOCA_To_Prospect_Settings__c/fields/CP_Resend_Template_ID__c.field-meta.xml
<CustomField>
    <fullName>CP_Resend_Template_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CP Resend Template ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>