WexGit/Wex_DX/force-app/main/default/objects/BOCA_To_Prospect_Settings__c/fields/Default_Email_Template_ID__c.field-meta.xml
<CustomField>
    <fullName>Default_Email_Template_ID__c</fullName>
    <description>ID of the default e-mail template for BOCA To Prospect if not configured at the Program level.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>ID of the default e-mail template for BOCA To Prospect if not configured at the Program level.</inlineHelpText>
    <label>Default Email Template ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>