WexGit/Wex_DX/force-app/main/default/objects/BOCA_To_Prospect_Settings__c/fields/No_Reply_Email__c.field-meta.xml
<CustomField>
    <fullName>No_Reply_Email__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>No Reply Email</label>
    <type>Email</type>
</CustomField>