WexGit/Wex_DX/force-app/main/default/objects/BOCA_To_Prospect_Settings__c/fields/OTR_Email_Template_ID__c.field-meta.xml
<CustomField>
    <fullName>OTR_Email_Template_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>OTR Email Template ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>