WexGit/Wex_DX/force-app/main/default/objects/BOCA_To_Prospect_Settings__c/fields/Partner_BOCA_To_Prospect_Template__c.field-meta.xml
<CustomField>
    <fullName>Partner_BOCA_To_Prospect_Template__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Partner BOCA To Prospect Template</label>
    <length>20</length>
    <type>Text</type>
</CustomField>